--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "dependencies": {
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "react-icons": "^4.8.0",
+    "flowbite": "^1.6.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.22",
+    "tailwindcss": "^3.3.1"
   }
 }
