--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "dotenv": "^16.0.3",
+    "flowbite": "^1.6.4",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.17",
-    "react-icons": "^4.8.0",
-    "flowbite": "^1.6.4",
-    "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "dotenv-webpack": "^8.0.1",
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1"
   }
