--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "dotenv": "^16.0.3",
     "flowbite": "^1.6.4",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.13.0",
+    "mongodb": "^4.17.1",
     "mongoose": "^6.8.3",
-    "next": "13.3.0",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
