--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
